--- a/advanced/composer.json
+++ b/advanced/composer.json
@@ -20,7 +20,8 @@
         "yiisoft/yii2-swiftmailer": "~2.0.0 || ~2.1.0",
         "dmstr/yii2-adminlte-asset": "^2.6",
         "mdmsoft/yii2-admin": "~2.0",
-        "yiisoft/yii2-authclient": "^2.2"
+        "yiisoft/yii2-authclient": "^2.2",
+        "upyun/sdk": "^3.4"
     },
     "require-dev": {
         "yiisoft/yii2-debug": "~2.1.0",
