--- a/advanced/composer.json
+++ b/advanced/composer.json
@@ -21,7 +21,8 @@
         "dmstr/yii2-adminlte-asset": "^2.6",
         "mdmsoft/yii2-admin": "~2.0",
         "yiisoft/yii2-authclient": "^2.2",
-        "upyun/sdk": "^3.4"
+        "upyun/sdk": "^3.4",
+        "yiidoc/yii2-redactor": "*"
     },
     "require-dev": {
         "yiisoft/yii2-debug": "~2.1.0",
