--- a/advanced/composer.json
+++ b/advanced/composer.json
@@ -22,7 +22,8 @@
         "mdmsoft/yii2-admin": "~2.0",
         "yiisoft/yii2-authclient": "^2.2",
         "upyun/sdk": "^3.4",
-        "yiidoc/yii2-redactor": "*"
+        "yiidoc/yii2-redactor": "*",
+        "bailangzhan/yii2-webuploader": "dev-master"
     },
     "require-dev": {
         "yiisoft/yii2-debug": "~2.1.0",
